# AIChess

./: CMakeLists.txt  CMakePresets.json  vcpkg.json
include/: Bishop.h  King.h  Knight.h  Pawn.h  Piece.h  Position.h  Queen.h  Rook.h  board.h
src/: Bishop.cpp  Board.cpp  King.cpp  Knight.cpp  Pawn.cpp  Piece.cpp  Queen.cpp  Rook.cpp  main.cpp
